--- a/GreenGardenClient/GreenGardenClient/Views/Service/OrderTicket.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/OrderTicket.cshtml
@@ -72,8 +72,49 @@
 
                                 <li><a href="blog.html" class="nav-link">Liên hệ</a></li>
                                 <li>
-                                    <a href="/Common/Login" class="nav-link">Đăng nhập</a>
-                                    <a href="/Common/Register" class="nav-link">Đăng Ký</a>
+                                    @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
+                                    @if (HttpContextAccessor.HttpContext.Session.GetString("Email") == null)
+                                    {
+                                        <a href="/Common/Login" class="nav-link">Đăng nhập</a>
+                                        <a href="/Common/Register" class="nav-link">Đăng Ký</a>
+                                    }
+                                    else
+                                    {
+
+
+                                    <li class="has-dropdown">
+                                        <a href="~/Common/UpdateProfile" class="nav-link" style="display: flex; align-items: center;">
+                                            <div style="width: 30px; height: 30px; border-radius: 50%; overflow: hidden; margin-right: 8px;">
+                                                <img src="~/images/img_1.jpg" alt="Trang cá nhân" style="width: 100%; height: 100%; object-fit: cover;">
+                                            </div>
+                                                @HttpContextAccessor.HttpContext.Session.GetString("Fullname")
+                                        </a>
+
+
+                                        <ul class="dropdown">
+                                                @if (HttpContextAccessor.HttpContext.Session.GetInt32("RoleId") == 1)
+                                                {
+                                                <li><a href="~/OrderManagement" class="nav-link">Quản lí</a></li>
+                                                <li><a href="~/Home/Logout" class="nav-link">Đăng xuất</a></li>
+                                                }
+                                                else if (HttpContextAccessor.HttpContext.Session.GetInt32("RoleId") == 2)
+                                                {
+                                                <li><a href="~/Service/OrderTicket" class="nav-link">Quản lí</a></li>
+                                                <li><a href="~/Home/Logout" class="nav-link">Đăng xuất</a></li>
+                                                }
+                                                else
+                                                {
+
+                                                <li><a href="~/Service/OrderTicket" class="nav-link">Lịch sử đặt hàng</a></li>
+                                                <li><a href="~/Service/OrderFoodAndDrink" class="nav-link">Giỏ hàng</a></li>
+                                                <li><a href="~/Home/Logout" class="nav-link">Đăng xuất</a></li>
+
+                                                }
+                                        </ul>
+                                    </li>
+                                    }
+
                                 </li>
 
                             </ul>
@@ -440,33 +481,32 @@
                                             <img src="~/images/img_1.jpg" alt="Image" class="img-fluid">
                                         </div>
                                         <div class="product-content">
-                                            <h2><a href="@Url.Action("TripSingle", new { id = item.TicketId })">@item.TicketName</a></h2>
+                                            <h2><a href="@Url.Action("TripSingle", new { id = item.TicketId })">Vé @item.TicketName</a></h2>
                                             <p><i class="fa fa-info-circle"></i> Mô tả: Vé đơn giúp bạn trải nghiệm không gian cắm trại và tổ chức tiệc ngoài trời rộng rãi.</p>
 
                                             <div class="price-quantity">
                                                 <p style="margin-bottom:1px" class="price"><i class="fa fa-money-bill-wave"></i> @item.Price.ToString("N0")đ</p>
-                                                <div class="quantity-control">
-                                                    <button class="btn-minus" onclick="decreaseQuantity('quantity-@item.TicketId')">-</button>
-                                                    <input type="text" value="1" class="quantity" id="quantity-@item.TicketId">
-                                                    <button class="btn-plus" onclick="increaseQuantity('quantity-@item.TicketId')">+</button>
-                                                </div>
                                             </div>
 
-                                            <form method="post" action="/Service/AddToCart">
-                                                <input type="hidden" name="Id" value="@item.TicketId" />
-                                                <input type="hidden" name="Name" value="@item.TicketName" />
-                                                <input type="hidden" name="CategoryName" value="@item.TicketCategoryName" />
-                                                <input type="hidden" name="Type" value="Ticket" />
-                                                <input type="hidden" name="TypeCategory" value="TicketCategory" />
-                                                <input type="hidden" name="price" value="@item.Price" />
-                                                <input type="hidden" name="quantity" value="1" />
-                                                <!-- Input ẩn để lưu ngày sử dụng được chọn -->
-                                                <input type="hidden" id="hidden-date-@item.TicketId" name="usageDate" />
-                                                <input type="hidden" name="redirectAction" value="OrderTicket" />
-                                                <button type="submit" class="add-to-cart" onclick="return setUsageDate('@item.TicketId')">
-                                                    <i class="fa fa-cart-shopping"></i> Thêm giỏ hàng
-                                                </button>
-                                            </form>
+                                            
+                                            <div class="btn-group">
+                                                <form method="post" action="/Service/AddToCart">
+                                                    <input type="hidden" name="Id" value="@item.TicketId" />
+                                                    <input type="hidden" name="Name" value="@item.TicketName" />
+                                                    <input type="hidden" name="CategoryName" value="@item.TicketCategoryName" />
+                                                    <input type="hidden" name="Type" value="Ticket" />
+                                                    <input type="hidden" name="TypeCategory" value="TicketCategory" />
+                                                    <input type="hidden" name="price" value="@item.Price" />
+                                                    <input type="hidden" name="quantity" value="1" />
+                                                    <!-- Input ẩn để lưu ngày sử dụng được chọn -->
+                                                    <input type="hidden" id="hidden-date-@item.TicketId" name="usageDate" />
+                                                    <input type="hidden" name="redirectAction" value="OrderTicket" />
+                                                    <button type="submit" class="add-to-cart" onclick="return setUsageDate('@item.TicketId')">
+                                                        <i class="fa fa-cart-shopping"></i> Thêm giỏ hàng
+                                                    </button>
+                                                </form>
+                                                <a href="@Url.Action("TicketDetail", "Service", new { ticketId = item.TicketId })" class="buy-now">Xem chi tiết</a>
+                                            </div>                                          
                                         </div>
                                     </div>
                                 }
