--- a/GreenGardenClient/GreenGardenClient/wwwroot/css/main.css
+++ b/GreenGardenClient/GreenGardenClient/wwwroot/css/main.css
@@ -13597,18 +13597,18 @@ be a descendant of the grid when it is being dragged.
 
 /*----- Componant: Top Navigation Bar ----- */
 .app-header {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: rgb(0, 28, 64);
-  z-index: 1;
-  padding-right: 15px;
-  padding-left: 15px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: #eee;
+    z-index: 1;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
 @media (min-width: 768px) {
